# nta_utils

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
src/nta_utils/: __main__.py  auth.py  config.py
src/nta_utils/handlers/: gcal.py  gpx.py  schedule.py  start.py
src/nta_utils/services/: gcal.py  schedule_parser.py
