[project]
name = "nta_utils"
version = "0.2.0"
description = "Telegram bot for NTA utils"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "gcsa>=2.0",
    "gpx>=2026.3.0",
    "python-telegram-bot>=21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nta_utils"]
